--- a/docs/thebook/Book.tex
+++ b/docs/thebook/Book.tex
@@ -1,6 +1,6 @@
-\documentclass[12pt]{svmono}
+\documentclass[11pt]{svmono}
 \usepackage{geometry}        
-\geometry{letterpaper}    
+   
 \usepackage[parfill]{parskip}  
 \usepackage{graphicx}
 \usepackage{amssymb}
@@ -16,14 +16,17 @@
 \geometry{letterpaper}    
 \usepackage{graphicx}
   \usepackage{amsmath}
+ 
   \usepackage{tikz}
+  \usetikzlibrary{calc,trees,positioning,arrows,fit,shapes,calc}
+
  \usepackage{tcolorbox}
  \tcbuselibrary{skins}
  \tcbuselibrary{theorems}
 \usepackage{hyperref}   
 \usepackage{color}
 \newcommand{\VAR}{CTRL-r }
-%\usepackage[dvipsnames]{xcolor}
+\usepackage{xcolor}
          		% ... or a4paper or a5paper or ... 
 %\geometry{landscape}                		% Activate for for rotated page geometry
 %\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
@@ -32,24 +35,38 @@
 \usepackage{amssymb}
 \usepackage{epigraph}								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{proof}
+\definecolor{myblue}{RGB}{243,255,255}
+\definecolor{mypink}{RGB}{251,229,226}
+\definecolor{myyellow}{RGB}{255,255,227}
+
 
 %\author{The Author}
 %\date{}							% Activate to display a given date or no date
 %\newcommand{\inp}[1]{\texttt{\colorbox{yellow!25}{#1}}}
-\newcommand{\inp}[1]{\begin{tcolorbox}[colback=yellow!25!,colframe=black]\texttt{#1} \end{tcolorbox}}
+\newcommand{\inp}[1]{\begin{tcolorbox}[colback=myyellow,colframe=gray]\texttt{#1} \end{tcolorbox}}
 
 %\newcommand{\proc}[1]{\texttt{\colorbox{green!25}{#1}}}
 \newcommand{\proc}[1]{\begin{tcolorbox}[colback=green!35!white,colframe=black]#1 \end{tcolorbox}}
- \newcommand{\coq}[2]{\begin{tcolorbox}[bicolor,righthand width=\linewidth/4,colback=gray!10!white,colframe=black, ,colbacklower=orange ]$#1$ \tcblower
+
+ \newcommand{\coq}[2]{\begin{tcolorbox}[enhanced,title=Goal,coltitle=black, colframe=gray,
+          attach boxed title to top left={yshift=-2mm}, colbacktitle=gray!15,bicolor,righthand width=\linewidth/4,colback=myblue, ,colbacklower=mypink ]$#1$ \tcblower
 $ #2 \ $ \end{tcolorbox}}
+
  \newcommand{\coqtwo}[3]{
  \begin{tcolorbox}[bicolor,righthand width=\linewidth/4,sidebyside,colback=green!35!white,colbacklower=gray!10!white] {\small \texttt{#1}}\tcblower
 ]{\begin{tcolorbox}[bicolor,righthand width=\linewidth/4,colback=gray!10!white,colframe=black, ,colbacklower=orange ]$#2$ \tcblower
 $ #3 \ $ \end{tcolorbox}}  \end{tcolorbox}}
+
  \newcommand{\rmk}[1]{
-\begin{tcolorbox}[title= remark, colback=red!5!white,colframe=gray]
+\begin{tcolorbox}[fonttitle=\bfseries,coltitle=black, title= Remark, colbacktitle=gray!15, colback=gray!5!white,colframe=gray]
 #1\end{tcolorbox}}
-\newcommand{\mess}[1]{\begin{tcolorbox}[colback=white,colframe=black] #1 \end{tcolorbox}}
+
+\newcommand{\warn}[1]{\begin{tcolorbox}[fonttitle=\bfseries,coltitle=black,colframe=red!90, title=!Warning!]#1 \end{tcolorbox}}
+
+
+\newcommand{\mess}[1]{\begin{tcolorbox}[colback=white,colframe=gray] #1 \end{tcolorbox}}
+\newcommand{\code}[1]{\begin{verbatim} #1 \end{verbatim}}
+
 \newtheorem{Theorem}{Theorem}
 \newtheorem{Lemma}{Lemma}
 \newtheorem{Proposition}{Proposition}
@@ -104,6 +121,10 @@ $ #3 \ $ \end{tcolorbox}}  \end{tcolorbox}}
 
 \include{prooftech/proof1}
 \include{prooftech/predicate}
+\include{SetTheory/settheory}
+\include{Numbers/numbers}
+\include{Relations/relations}
+\include{Algebraic/algstr}
 \appendix
 %\appendixpage
 %\noappendicestocpagenum
@@ -112,15 +133,15 @@ $ #3 \ $ \end{tcolorbox}}  \end{tcolorbox}}
 \include{Installation/UserManual}
 
 \include{Installation/menus}
-
+\include{Tactics/language}
 \include{Tactics/tactics}
 \include{Installation/examples}
 \include{Tactics/types}
-\bibliographystyle{plain-annote}
-\bibliography{mybibliography}
 
 
-
+\bibliography{bookbib}
+\bibliographystyle{plain}
 \end{document}
-\end
+\end{document}
+
 
