--- a/docs/thebook/Installation/menus.tex
+++ b/docs/thebook/Installation/menus.tex
@@ -1,5 +1,71 @@
 \section{Introducing the GUI}
-\subsection{Main windows}
+\subsection{Online}
+
+Figure~\ref{online gui}  is the main window in the online version.
+
+\begin{enumerate}
+\item The Green window  : This is the window that keeps the text that has already been processed.
+\item The Yellow window ': This is the only window you can type your commands into.
+\item The white window : this is the Coq feedback window. 
+\item The grey window : this is a window for messages.
+\item The run button: this sends the first line from the input window to Coq.
+\item The undo button: this undoes the last command.
+\end{enumerate}
+\begin{figure}[h!]
+\includegraphics[scale=0.3]{Installation/mainonline.png}
+\caption{the online GUI}\label{online gui}
+\end{figure}
+
+\subsection{The menus}
+
+The File menu (Figure \ref{file}) is quite standard:
+
+\begin{figure}[h!]
+\includegraphics[scale=0.5]{Installation/menu1online.png}
+
+
+\caption{the File  Menu}\label{file}
+\end{figure}
+
+The action menu allows you to pick run, undo or print tree:
+
+\begin{figure}[h!]
+\includegraphics[scale=0.4]{Installation/menu3online.png}
+
+
+\caption{the Action Menus}\label{actionsonline}
+\end{figure}
+
+
+The Tactics menu (Figure \ref{tacticsonline}) allows one to pick one of the predefined tactics. 
+Note the place keeper VAR. 
+These can be modified. More on these later.
+
+\begin{figure}[h!]
+\includegraphics[scale=0.5]{Installation/menu2online.png}
+
+
+\caption{the Tactics Menus}\label{tacticsonline}
+\end{figure}
+\subsection{Keyboard shortcuts}
+
+\begin{itemize}
+\item CTRL-Space autocompletion
+\item CTRL-r Run
+\item CTRL-u Undo
+\item CTRL-t Draw tree. 
+\end{itemize}
+
+
+
+
+
+
+
+
+
+\subsection{Desktop}
+\subsubsection{Main windows}
 Figure~\ref{first look} is a view of the GUI. As you can see there are 4 different windows and three buttons.
 \begin{enumerate}
 \item The Green window  : This is the window that keeps the text that has already been processed.
